fix lights overlap and Links

--- a/src/components/Doors.css
+++ b/src/components/Doors.css
@@ -1,3 +1,8 @@
 #doors #lyspærer {
     cursor: pointer;
 }
+
+#lyspærer text {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
+}
